2007-04-24  Alan McGovern <alan.mcgovern@gmail.com>

	* System.Windows.Forms.dll.resources - Added files for the BindingNavigator

2007-04-24  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* SWF.csproj, SWF2k5.csproj, SWF2k5-tests.csproj: Update.
	* System.Windows.Forms.dll.sources: Add MaskedTextBox.

2007-04-24  Alan McGovern  <alan.mcgovern@gmail.com>

	* System.Windows.Forms.dll.sources: Added
		BindingNavigator.cs
		BindingNavigatorTests.cs
				
2007-04-23  Jonathan Pobst  <monkey@jpobst.com>

	* System.Windows.Forms_test.dll.sources: Add TableLayoutTest.cs.

2007-04-22  Alan McGovern  <alan.mcgovern@gmail.com>

	* System.Windows.Forms.dll.sources:
	Stubbed and added:
		DrawListViewColumnHeaderEventArgs.cs
		DrawListViewColumnHeaderEventArgs.cs
		DrawListViewColumnHeaderEventArgs.cs

2007-04-15  Andreia Gaita  <avidigal@novell.com>

	* System.Windows.Forms.dll.sources: Add ThemeElementsClearlooks, 
	ThemeElementsGtk, ThemeElementsNice, Nice/ButtonPainter, 
	Default/TabControlPainter and Default/ButtonPainter

2007-04-01  Alp Toker  <alp@atoker.com>

	* build-csproj:
	* build-csproj2k5:
	* build-csproj2k5-tests: Use bash, not sh. These scripts do run with
	POSIX sh but they produce incorrect output containing binary garbage.
	Output is correct when 'bash' is used instead of 'sh'.

2007-03-30  Jonathan Pobst  <monkey@jpobst.com>

	* System.Windows.Forms.dll.sources: Add ScrollProperties, 
	HScrollProperties, and VScrollProperties.
	* System.Windows.Forms_test.dll.sources: Add HScrollPropertiesTest and
	VScrollPropertiesTest.

2007-03-28  Jonathan Pobst  <monkey@jpobst.com>

	* System.Windows.Forms_test.dll.sources: Add StatusStripTest.cs,
	ToolStripContainerTest.cs, ToolStripContentPanelTest.cs,
	ToolStripDropDownTest.cs, ToolStripManagerTest.cs, 
	ToolStripOverflowButtonTest.cs, ToolStripOverflowTest.cs
	ToolStripPanelTest.cs, ToolStripStatusLabelTest.cs.

2007-03-13  Gert Driesen  <drieseng@users.sourceforge.net>
